big fat bundle <3

--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: "com.android.application"
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 import com.android.build.OutputFile
 
@@ -150,6 +152,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('app.keystore')
+            storePassword 'password123'
+            keyAlias 'app'
+            keyPassword 'password123'
+        }
     }
     buildTypes {
         debug {
@@ -159,8 +167,12 @@ android {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+//             firebaseCrashlytics {
+//                 nativeSymbolUploadEnabled true
+//             }
         }
     }
 
