--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-firebase/app": "^8.4.3",
+    "@react-native-firebase/crashlytics": "^8.4.5",
+    "i18n-js": "^3.7.1",
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-localize": "^1.4.1",
+    "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
